tests/baselines/reference/parserComputedPropertyName35.errors.txt
parserComputedPropertyName35.ts(2,6): error TS2695: Left side of comma operator is unused and has no side effects.
parserComputedPropertyName35.ts(2,6): error TS1171: A comma expression is not allowed in a computed property name.


==== parserComputedPropertyName35.ts (2 errors) ====
    var x = {
        [0, 1]: { }
         ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
         ~~~~
!!! error TS1171: A comma expression is not allowed in a computed property name.
    }